@@ -186,10 +186,6 @@ define('_MI_LEXIKON_EDITOR_USER', 'Editor: User');
 define('_MI_LEXIKON_EDITOR_USER_DESC', 'Select the Editor to use by the User');
 define('_MI_LEXIKON_KEYWORDS', 'Keywords');
 define('_MI_LEXIKON_KEYWORDS_DESC', 'Insert here the keywords (separate by comma)');
-define('_MI_LEXIKON_ADMINPAGER', 'Admin: records / page');
-define('_MI_LEXIKON_ADMINPAGER_DESC', 'Admin: # of records shown per page');
-define('_MI_LEXIKON_USERPAGER', 'User: records / page');
-define('_MI_LEXIKON_USERPAGER_DESC', 'User: # of records shown per page');
 define('_MI_LEXIKON_MAXSIZE', 'Max size');
 define('_MI_LEXIKON_MAXSIZE_DESC', 'Set a number of max size uploads file in byte');
 define('_MI_LEXIKON_MIMETYPES', 'Mime Types');
