@@ -186,10 +186,6 @@ define('_MI_LEXIKON_EDITOR_USER', 'Editor: User');
 define('_MI_LEXIKON_EDITOR_USER_DESC', 'Wähle den Editor für User-Bereich');
 define('_MI_LEXIKON_KEYWORDS', 'Schlüsselworter');
 define('_MI_LEXIKON_KEYWORDS_DESC', 'Bitte Schlüsselwörter angeben (getrennt durch ein Komma)');
-define('_MI_LEXIKON_ADMINPAGER', 'Admin: Einträge / Seiten');
-define('_MI_LEXIKON_ADMINPAGER_DESC', 'Admin: Anzahl Einträge pro Seite');
-define('_MI_LEXIKON_USERPAGER', 'User: Einträge / Seiten');
-define('_MI_LEXIKON_USERPAGER_DESC', 'User: Anzahl Einträge pro Seite');
 define('_MI_LEXIKON_MAXSIZE', 'Maximale Größe');
 define('_MI_LEXIKON_MAXSIZE_DESC', 'Definieren Sie bitte die maximale Größe für einen Dateiupload');
 define('_MI_LEXIKON_MIMETYPES', 'Mime-Types');
